# dyn_sys

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  main.cpp
GUI/: Window.cpp  Window.h  XYChart.cpp  XYChart.h
Solver/: CultureEvolutionModel.cpp  CultureEvolutionModel.h  RungeKuttaMethod.cpp  RungeKuttaMethod.h  TrophicChainModel.cpp  TrophicChainModel.h
dyn_sys.app/Contents/: Info.plist
dyn_sys.app/Contents/MacOS/: libjpeg.8.dylib  libpng16.16.dylib  libtiff.5.dylib
